syntax = "proto3";

package inventory.v1;
option go_package = "proto-definitions/inventory;inventory";

message Product {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  string description = 4;
  float price = 5;
}

message Stock {
  int64 id = 1;
  int64 product_id = 2;
  int64 total_stock = 3;
  int64 available_stock = 4;
  int64 reserved_stock = 5;
}

message CheckStockRequest {
  int64 product_id = 1;
  int64 quantity = 2;
}

message CheckStockResponse {
  Product product = 1;
  Stock stock = 2;
  int64 quantity = 3;
  bool is_available = 4;
}

message ReserveStockRequest {
  int64 product_id = 1;
  int64 quantity = 2;
  int64 order_id = 3;
}

message ReserveStockResponse {
  bool success = 1;
  string message = 2;
}

message ReleaseStockRequest {
  int64 product_id = 1;
  int64 quantity = 2;
  int64 order_id = 3;
}

message ReleaseStockResponse {
  bool success = 1;
  string message = 2;
}

service InventoryService {
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
}